# TelemetrySystem

./: CMakeLists.txt  README.md
data/: en.txt  jp.txt  vehicles.csv
include/: Car.h  Colors.h  CombustionVehicle.h  ElectricVehicle.h  GasolineCar.h  LanguageManager.h  System.h  SystemUI.h  Utils.h  Vehicle.h
src/: GasolineCar.cpp  LanguageManager.cpp  System.cpp  SystemUI.cpp  Vehicle.cpp  main.cpp
tests/: testSystem.cpp  test_main.cpp  tests_utils.cpp
